# SFSS

./: README.md  schema.proto
Secure-share-file-system/kms-server/: .gitignore  Cargo.toml  build.rs  certs.sh
Secure-share-file-system/kms-server/src/: main.rs  proto.rs
Secure-share-file-system/kms-server/src/crypto/: chacha.rs
Secure-share-file-system/kms-server/src/db/: vault.rs
Secure-share-file-system/kms-server/src/handlers/: interrogate.rs  mod.rs  stream.rs
VaultControl/: package-lock.json
VaultControl/backend/: .env  package-lock.json  package.json  run_migration.js
VaultControl/backend/src/: db.d.ts.map  db.js  db.js.map  index.js  index.js.map  index.ts
VaultControl/db/migrations/: 01_initial_schema.sql
VaultControl/frontend/: BACKEND_IMPLEMENTATION.md  package-lock.json
VaultControl/frontend/src/: App.tsx  index.css
VaultControl/frontend/src/components/: AccessControl.tsx  AccessControlModal.tsx  AuditLog.tsx  AuditLogPage.tsx  Dashboard.tsx  Navbar.tsx  UploadModal.tsx
secure_agent/: Cargo.toml  Explanatino.enc  Roles.enc  build.rs  dummy.enc  nginx.enc
secure_agent/certs/: ca.crt  client.crt  client.key
secure_agent/src/: main.rs  telemetry.rs  todo.txt
