[package]
name = "kms-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
async-stream = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "ipnetwork"] }
chacha20poly1305 = "0.10"
rand = "0.8"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.21"
dotenvy = "0.15"
ipnetwork = "0.20"
prost = "0.12"
bytes = "1.5"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2.1"
webpki-roots = "0.26"

[build-dependencies]
prost-build = "0.12"
protoc-bin-vendored = "3.0.0"
